--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <button class="r-5">hola</button>
+    <button class="btn r-5">hola</button>
 </body>
 </html>
