--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-CO">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <button class="btn r-5">hola</button>
+    <button class="s-btn s-btn-solid s-r-5">hola</button>
 </body>
 </html>
