--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <button class="s-btn s-btn-solid s-r-5">hola</button>
+    <button class="s-btn s-r-25">Hola dos</button>
 </body>
 </html>
